--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,7 @@
-PORT=4002;
+PORT=3000
 
-MONGODB_URI = "mongodb+srv://harshvardhansharma247:h1234567890@cluster0.zw4oid6.mongodb.net/ChatApp?retryWrites=true&w=majority&appName=Cluster0";
+MONGODB_URI = mongodb+srv://harshvardhansharma247:h1234567890@cluster0.zw4oid6.mongodb.net/ChatApp?retryWrites=true&w=majority&appName=Cluster0
 
-JWT_TOKEN=B3ppLa5YdWGpb7VFygHFPIKSeMfaYgtkCx0xuh0ao/4=;
+JWT_TOKEN=B3ppLa5YdWGpb7VFygHFPIKSeMfaYgtkCx0xuh0ao/4=
+
+NODE_ENV = "production"
