--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,12 +1,13 @@
-{
-  "name": "Chat Application",
+ {
+  "name": "ChatApplication",
   "version": "1.0.0",
   "description": "ChatApp ",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "keywords": [
     "MERN"
